really fixed container alignment

--- a/static/style.css
+++ b/static/style.css
@@ -79,21 +79,26 @@ a:hover {
   height: 100%;
   overflow: hidden;
 
-  font-size: 6vw;
+  font-size: 3vw;
   text-align: center;
-  text-align: -webkit-center;
   color: #666;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+}
+
+.absolute-center {
+  width: 50%;
+  height: 50%;
+  overflow: auto;
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
 }
 
 #wind {
   position: relative;
-  text-align: center;
   font-weight: 100;
   margin-top: 0;
 }
+
 
 #update {
   font-family: Arial, sans-serif;
